# pace

./: .gitignore  .gitmodules  CMakeLists.txt  REPORT.md  a.vc  g.dot  g.gr  smth
conf/: db_default.json
conf/generate/: bipartite.json  graphs.json
conf/speedtest/: bipartite_max_matching.json  kernels.json  lp_crown_comparison.json  lp_crown_ilp_comparison.json  public_instances.json  public_instances_kernels.json  public_instances_v1.json  public_instances_v2.json  vc.json  zs_crown2k_comparison.json  zs_crown2k_ilp_comparison.json
data/analysis/: surplus.txt
data/analysis/db/: db.json  tests.html  vc-exact_001.gr  vc-exact_001.hgr  vc-exact_003.gr  vc-exact_003.hgr  vc-exact_005.gr  vc-exact_005.hgr  vc-exact_007.gr  vc-exact_007.hgr  vc-exact_009.hgr  vc-exact_011.gr  vc-exact_011.hgr  vc-exact_013.gr  vc-exact_013.hgr  vc-exact_015.gr  vc-exact_015.hgr  vc-exact_017.gr  vc-exact_017.hgr  vc-exact_019.gr  vc-exact_019.hgr  vc-exact_021.gr  vc-exact_021.hgr  vc-exact_023.hgr  vc-exact_025.gr  vc-exact_025.hgr  vc-exact_027.gr  vc-exact_027.hgr  vc-exact_029.gr  vc-exact_029.hgr  vc-exact_031.gr  vc-exact_031.hgr  vc-exact_033.gr  vc-exact_033.hgr  vc-exact_035.gr  vc-exact_035.hgr  vc-exact_037.gr  vc-exact_037.hgr  vc-exact_039.hgr  vc-exact_041.gr  (+96 more)
data/graphs-nogen/: caterpillar.gr  eight-squares.gr  envelope.gr  five-squares.gr  four-squares.gr  half-square.gr  hardened-caterpillar.gr  nine-squares-1.gr  three-squares-2.gr  three-squares.gr  triangle.gr  tripartitial-2.gr  tripartitial-3.gr  tripartitial.gr
data/vc-exact-public/: vc-exact_177.hgr  vc-exact_179.hgr  vc-exact_181.hgr  vc-exact_183.hgr  vc-exact_185.hgr  vc-exact_187.hgr  vc-exact_189.hgr  vc-exact_191.hgr  vc-exact_193.hgr  vc-exact_195.hgr  vc-exact_197.hgr  vc-exact_199.hgr
lib/: CMakeLists.txt
lib/bipartite_maxm/: augmenting_path.cpp  augmenting_path.h  best.cpp  best.h  matching.cpp  matching.h  matching_ut.cpp  min_vc.cpp  min_vc.h  min_vc_ut.cpp
lib/branching/: branching.cpp  branching.h  chen_liu_jia_3dvc.cpp  chen_liu_jia_3dvc.h  cutpoints.cpp  cutpoints.h  cutpoints_ut.cpp  debug_branching.cpp  debug_branching.h  max_degree.cpp  max_degree.h  max_degree_ut.cpp
lib/cut/: vertex_cut.cpp  vertex_cut.h
lib/graph/: bipartite_graph.cpp  bipartite_graph.h  boost_graph.cpp  boost_graph.h  graph.cpp  graph.h  graph_ut.cpp  util.cpp  util.h  util_ut.cpp
lib/kernels/: bound.cpp  bound.h  common.cpp  common.h  trivial.cpp  trivial.h  trivial_ut.cpp
lib/kernels/crown/: crown.cpp  crown.h  crown_2k.cpp  crown_2k.h
lib/kernels/lp/: glop.cpp  glop.h  lp.cpp  lp.h  lp_ut.cpp
lib/reader/: line_reader.cpp  line_reader.h
lib/solution/: greed.cpp  greed.h  solution.cpp  solution.h
lib/surplus/: surplus.cpp  surplus.h  surplus_ut.cpp
lib/ut/: vc_exact_public_ut.cpp
lib/util/: cow.cpp  cow.h  cow_ut.cpp
solutions/: CMakeLists.txt
solutions/bipartite_max_matching/: CMakeLists.txt
solutions/bipartite_max_matching/boost_graph/: CMakeLists.txt  main.cpp
solutions/bipartite_max_matching/classic_kuhn/: CMakeLists.txt  main.cpp
solutions/bipartite_max_matching/hopcroftkarp/: CMakeLists.txt  main.cpp
solutions/bipartite_max_matching/optimized_kuhn/: CMakeLists.txt  main.cpp
solutions/bipartite_max_matching/py_hopcroftkarp/: py_hopcroftkarp.py
solutions/kernels/: CMakeLists.txt
solutions/kernels/crown/: CMakeLists.txt  main.cpp
solutions/kernels/crown_2k/: CMakeLists.txt  main.cpp
solutions/kernels/ex_crown/: CMakeLists.txt
solutions/kernels/ex_zero_surplus/: CMakeLists.txt  main.cpp
solutions/kernels/exhaustive_crown/: CMakeLists.txt  main.cpp
solutions/kernels/glop/: CMakeLists.txt  main.cpp
solutions/kernels/lp/: CMakeLists.txt  main.cpp
solutions/kernels/zero_surplus/: CMakeLists.txt  main.cpp
solutions/vc/: CMakeLists.txt
solutions/vc/clj_3dvc/: CMakeLists.txt  main.cpp
solutions/vc/cuts_cr2k/: CMakeLists.txt  main.cpp
solutions/vc/cuts_trivial/: CMakeLists.txt  main.cpp
solutions/vc/cuts_zs/: CMakeLists.txt  main.cpp
solutions/vc/ilp_cbc/: CMakeLists.txt  main.cpp
solutions/vc/ilp_cpsat/: CMakeLists.txt  main.cpp
solutions/vc/mxd_cr/: CMakeLists.txt  main.cpp
solutions/vc/mxd_cr2k/: CMakeLists.txt  main.cpp
solutions/vc/mxd_excr/: CMakeLists.txt  main.cpp
solutions/vc/mxd_exzs/: CMakeLists.txt  main.cpp
solutions/vc/mxd_lp/: CMakeLists.txt  main.cpp
solutions/vc/mxd_trivial/: CMakeLists.txt  main.cpp
solutions/vc/mxd_zs/: CMakeLists.txt
solutions/vc/opt/: CMakeLists.txt
solutions/vc/opt/max_is/: CMakeLists.txt  main.cpp
solutions/vc/opt/smth/: .main.cpp.swp  CMakeLists.txt  main.cpp
tools/: CMakeLists.txt
tools/biconnected_comp_tree/: CMakeLists.txt  main.cpp
tools/comps/: CMakeLists.txt  main.cpp
tools/crown_bound/: CMakeLists.txt  main.cpp
tools/cutpoints/: CMakeLists.txt  main.cpp
tools/db/: config.py  dbtools.py  instance.py  render.py  rendertools.py  update_db.py
tools/db/templates/: tests.html
tools/debug_branching/: CMakeLists.txt  main.cpp
tools/generators/: generate.py
tools/generators/bipartite/: random_bigraph.py
tools/generators/graph/: complete_graph.py  descending_triangles.py  ind_and_clique.py  random_graph.py  regular.py  stretched_clique.py
tools/graph_stats/: CMakeLists.txt  main.cpp
tools/greed/: CMakeLists.txt  main.cpp
tools/kernel_stats/: CMakeLists.txt
tools/kernel_stats/stat_c2k/: CMakeLists.txt  main.cpp
tools/kernel_stats/stat_zs/: CMakeLists.txt  main.cpp
tools/lpvc/: CMakeLists.txt  main.cpp
tools/speedtest/: speedtest.py
tools/surplus/: CMakeLists.txt  main.cpp
tools/to_dot/: CMakeLists.txt  main.cpp
tools/validate/: CMakeLists.txt  main.cpp
tools/vertex_cut/: CMakeLists.txt  main.cpp
tools/zs_greed/: CMakeLists.txt  main.cpp
