add_subdirectory(clj_3dvc)
add_subdirectory(cuts_cr2k)
add_subdirectory(cuts_trivial)
add_subdirectory(cuts_zs)
add_subdirectory(mxd_cr)
add_subdirectory(mxd_cr2k)
add_subdirectory(mxd_excr)
add_subdirectory(mxd_lp)
add_subdirectory(mxd_zs)
add_subdirectory(mxd_exzs)
add_subdirectory(mxd_trivial)
add_subdirectory(ilp_cbc)
add_subdirectory(ilp_cpsat)
